bk_ida/gccida/g3/simplify_replace_rtx
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:718:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v4; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:719:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:723:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:728:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // r11d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:736:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:742:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:746:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op2a; // [rsp+0h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:747:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op2b; // [rsp+0h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:748:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:758:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v19.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:805:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v9.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:823:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v12.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:852:22: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v27 = ( unsigned int)x[1]; 
                     ^~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:853:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v28.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/simplify-rtx.c:856:33: error: use of undeclared identifier 'machine_mode'
result = simplify_gen_subreg( ( machine_mode)*( ( unsigned __int8 *)x + 2), v30, v29, v27); 
                                ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/simplify_replace_rtx/src/obj/simplify-rtx.o] Error 1
